addresses awards alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1763,6 +1763,33 @@ address a {
   display: block;
 }
 
+@media screen and (max-width: 768px) {
+  .awards-wrapper {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .awards-wrapper {
+    display: initial;
+    height: 274px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .awards-wrapper {
+    display: initial;
+    height: 320px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .awards-wrapper {
+    display: initial;
+    height: 266px;
+  }
+}
+
 .awards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1771,37 +1798,28 @@ address a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-@media screen and (max-width: 768px) {
-  .awards {
-    display: none;
-  }
+  padding: 50px 0;
 }
 
 @media screen and (min-width: 768px) {
   .awards {
-    display: initial;
-    height: 274px;
     width: 750px;
   }
 }
 
 @media screen and (min-width: 992px) {
   .awards {
-    display: initial;
-    height: 320px;
     width: 970px;
   }
 }
 
 @media screen and (min-width: 1260px) {
   .awards {
-    width: 1200px;
-    display: initial;
-    height: 266px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -1813,6 +1831,9 @@ address a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .awards-row-two {
@@ -1823,12 +1844,13 @@ address a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 20px;
 }
 
 .awards-logo {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   vertical-align: middle;
   padding: 0 20px;
   position: relative;
@@ -1837,6 +1859,13 @@ address a {
 .awards-logo img {
   height: auto;
   max-width: 100%;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+.awards-logo img:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
 }
 
 .google img {
